--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,32 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Inter', sans-serif;
 }
 
-// TODO
+:root {
+  --pink: #FF57B2;
+  --white: #F8F8F8;
+  --black: #1A1D23;
+
+  --gray-100: #BBBBBB;
+  --gray-400: #D7D7D7;
+}
+
+body {
+  background: var(--black);
+  color: var(--white);
+}
+
+body, input, textarea, button, select {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
